# scOPE

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
Jupyter_notebooks/: code_test_notebook.ipynb  model_eval_test_notebook.ipynb
Jupyter_notebooks/.ipynb_checkpoints/: classification_model_training_using_vanGalen_scRNA-seq_data-checkpoint.ipynb  code_test_notebook-checkpoint.ipynb  integrating_scRNA_AML_patient_data-checkpoint.ipynb  model_eval_test_notebook_2-checkpoint.ipynb  preprocess_scRNA_and_bulk_RNA_AML_data_using_vanGalen_AnnData-checkpoint.ipynb  trained_model_exploration-checkpoint.ipynb
conda-recipe/: meta.yaml
environments/: scOPE_working_environment.yml  scope-dev.yml
notebooks/: 01_end_to_end_example.ipynb  02_CRC_TCGA_COAD_READ.ipynb  02_end_to_end_example-MLP.ipynb  03_BRCA_TCGA.ipynb  03_end_to_end_example-SVM.ipynb  04_SKCM_TCGA.ipynb  05_LUAD_TCGA.ipynb  06_GBM_TCGA.ipynb  07_PAAD_TCGA.ipynb
scOPE/: evaluate.py  model_prep.py  models.py  preprocessing.py  utilities.py
scope/: __init__.py
scope/classification/: __init__.py  base.py  models.py
scope/decomposition/: __init__.py  cnmf.py  factor_analysis.py  ica.py  nmf.py  pca.py  svd.py
scope/evaluation/: __init__.py  metrics.py  svd_evaluation.py
scope/io/: __init__.py  loaders.py
scope/pipeline/: __init__.py  bulk_pipeline.py  sc_pipeline.py
scope/preprocessing/: __init__.py  alignment.py  bulk.py  single_cell.py
scope/projection/: __init__.py
scope/utils/: __init__.py  gene_utils.py  hyperparameter_search.py  logging.py  validation.py
scope/visualization/: __init__.py  embeddings.py
tests/: conftest.py  test_evaluation.py  test_pipeline.py  test_utils.py
